--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> 
-        <link rel="stylesheet" href="css/style_bootstrap.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Splash&display=swap" rel="stylesheet">
@@ -30,10 +30,10 @@
                         <li class="nav_menu"><img src="img/inicio/icono_menu.jpg" alt="">
                             <ul class="display_menu">
                                 <li><a href="index.html">INICIO</a></li>
-                                <li><a href="../rooot/html/perfumes_bootstrap.html">PERFUMES</a></li>
-                                <li><a href="html/maquillajes_bootstrap.html">MAQUILLAJES</a></li>
-                                <li><a href="html/unias_bootstrap.html">UÑAS</a></li>
-                                <li><a href="html/contacto_bootstrap.html">CONTACTO</a></li>
+                                <li><a href="html/perfumes.html">PERFUMES</a></li>
+                                <li><a href="html/maquillajes.html">MAQUILLAJES</a></li>
+                                <li><a href="html/unias.html">UÑAS</a></li>
+                                <li><a href="html/contacto.html">CONTACTO</a></li>
                             </ul>
                         </li>
                         
@@ -41,7 +41,7 @@
                     <ul class="ul_nav_horizontal" >
                         
                         <li><a href="index.html">INICIO</a></li>
-                        <li><a href="../rooot/html/perfumes_bootstrap.html">PERFUMES</a></li>
+                        <li><a href="html/perfumes.html">PERFUMES</a></li>
                         <li><a href="html/maquillajes.html">MAQUILLAJES</a></li>
                         <li><a href="html/unias.html">UÑAS</a></li>
                         <li><a href="html/contacto.html">CONTACTO</a></li>
