Segunda version Bootstrap

--- a/html/perfumes.html
+++ b/html/perfumes.html
@@ -16,18 +16,25 @@
 <body>
     <div class="container-fluid">
         <header class="row" >
-            <div class="col-sm-12 col-md-12">
+            <div class="col-12 col-sm-12 col-md-4 pt-3">
                 <h1>PERFUMERIA BEAUTY</h1>
             </div>
+            <!-- <div class="col-sm-12 col-md-4 pt-3">
+                <form class="d-flex" role="search">
+                    <button class="btn_buscador" type="submit"><img src="../img/logos_iconos/icono_buscador.jpg" alt=""></button>
+                    <input class="buscador " type="search" placeholder="Buscar" >
+                </form>
+            </div> -->
+            <div class="col-sm-12 col-md-4"></div>
                    
         </header>
         <nav class="row" >
             <div class="nav_">
                 <div class="col-sm-12 col-md-12">
                     <ul class="ul_nav_vertical">
-                        <li class="nav_menu"><img src="img/inicio/icono_menu.jpg" alt="">
+                        <li class="nav_menu"><img src="../img/logos_iconos/icono_menu.jpg" alt="icono_menu">
                             <ul class="display_menu">
-                                <li><a href="index.html">INICIO</a></li>
+                                <li><a href="../index.html">INICIO</a></li>
                                 <li><a href="perfumes.html">PERFUMES</a></li>
                                 <li><a href="maquillajes.html">MAQUILLAJES</a></li>
                                 <li><a href="unias.html">UÑAS</a></li>
