--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="nav_">
                 <div class="col-sm-12 col-md-12">
                     <ul class="ul_nav_vertical">
-                        <li class="nav_menu"><img src="img/inicio/icono_menu.jpg" alt="">
+                        <li class="nav_menu"><img src="img/logos_iconos/icono_menu.jpg" alt="">
                             <ul class="display_menu">
                                 <li><a href="index.html">INICIO</a></li>
                                 <li><a href="html/perfumes.html">PERFUMES</a></li>
