--- a/html/maquillajes.html
+++ b/html/maquillajes.html
@@ -19,6 +19,12 @@
             <div class="col-sm-12 col-md-12">
                 <h1>PERFUMERIA BEAUTY</h1>
             </div>
+            <!-- <div class="col-sm-12 col-md-4 pt-3">
+                <form class="d-flex" role="search">
+                    <button class="btn_buscador" type="submit"><img src="../img/logos_iconos/icono_buscador.jpg" alt=""></button>
+                    <input class="buscador " type="search" placeholder="Buscar" >
+                </form>
+            </div> -->
                    
         </header>
         <nav class="row" >
