--- a/html/perfumes.html
+++ b/html/perfumes.html
@@ -15,8 +15,9 @@
 </head>
 <body>
     <div class="container-fluid">
+
         <header class="row" >
-            <div class="col-12 col-sm-12 col-md-4 pt-3">
+            <div class="col-sm-12 col-md-12">
                 <h1>PERFUMERIA BEAUTY</h1>
             </div>
             <!-- <div class="col-sm-12 col-md-4 pt-3">
@@ -25,9 +26,10 @@
                     <input class="buscador " type="search" placeholder="Buscar" >
                 </form>
             </div> -->
-            <div class="col-sm-12 col-md-4"></div>
                    
         </header>
+
+
         <nav class="row" >
             <div class="nav_">
                 <div class="col-sm-12 col-md-12">
