Tercera version Bootstrap

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -17,7 +17,8 @@
     <div class="container-fluid">
         <header class="row" >
             <div class="col-sm-12 col-md-12">
-                <h1>PERFUMERIA BEAUTY</h1>
+                <a href="../index.html"><h1>PERFUMERIA BEAUTY</h1></a>
+                
             </div>
             <!-- <div class="col-sm-12 col-md-4 pt-3">
                 <form class="d-flex" role="search">
