--- a/html/unias.html
+++ b/html/unias.html
@@ -70,9 +70,9 @@
                     <ul class="categorias_unias">
                         <li><label for="todo">TODO</label></li>
                         <li><label for="esmaltes">ESMALTES</label></li>
-                        <li><label for="gel">GEL/POLIGEL</label></li>
+                        <li><label for="gel">POLYGEL</label></li>
                         <li><label for="acrilicas">ACRILICAS</label></li>
-                        <li><label for="removedores">REMOVEDORES</label></li>
+                        <li><label for="removedores">REMOVEDOR</label></li>
                     </ul>
                 </li>
             </ol>
