--- a/html/unias.html
+++ b/html/unias.html
@@ -146,7 +146,7 @@
                     <ul>
                         <li class="image_producto"><img src="../img/unias/gel1.jpg" alt="imagen rimmel">
                             <ul>
-                                <li><h2>CHERIMOYA/h2></li>
+                                <li><h2>CHERIMOYA</h2></li>
                                 <li><p>Gel construccion 45 gr</p></li>
                             </ul>
                             <ul class="boton_compra_unias">
