--- a/html/perfumes.html
+++ b/html/perfumes.html
@@ -84,7 +84,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -100,7 +100,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -116,7 +116,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -132,7 +132,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -148,7 +148,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -164,7 +164,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -180,7 +180,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -196,7 +196,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -212,7 +212,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -228,7 +228,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -244,7 +244,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -260,7 +260,7 @@
                             </ul>
                             <ul class="boton_compra_perfume">
                                 <li>
-                                    <button class="boton_compra_perfume">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
