V2 SCSS aplicado a todo solo restan las variables

--- a/html/unias.html
+++ b/html/unias.html
@@ -87,7 +87,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -103,7 +103,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -119,7 +119,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -135,7 +135,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -151,7 +151,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -167,7 +167,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -183,7 +183,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -199,7 +199,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -215,7 +215,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -231,7 +231,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -247,7 +247,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -263,7 +263,7 @@
                             </ul>
                             <ul class="boton_compra_unias">
                                 <li>
-                                    <button class="boton_compra_unias">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
