--- a/html/maquillajes.html
+++ b/html/maquillajes.html
@@ -86,7 +86,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -102,7 +102,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -118,7 +118,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -134,7 +134,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -150,7 +150,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -166,7 +166,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -182,7 +182,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -198,7 +198,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -214,7 +214,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -230,7 +230,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -246,7 +246,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
@@ -262,7 +262,7 @@
                             </ul>
                             <ul class="boton_compra_maquillajes">
                                 <li>
-                                    <button class="boton_compra_maquillajes">COMPRAR</button>
+                                    <button class="btn_compra">COMPRAR</button>
                                 </li>
                             </ul>
                         </li>
