V4 SCSS aplicado a todas las paginas  mas las variables

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -25,7 +25,7 @@
           
         </header>
         <nav class="row" >
-            <div class="nav_">
+            <div class="navbar">
                 <div class="col-sm-12 col-md-12">
                     <ul class="ul_nav_vertical">
                         <li class="nav_menu"><img src="../img/logos_iconos/icono_menu.jpg" alt="icono_menu">
