--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           
         </header>
         <nav class="row" >
-            <div class="nav_">
+            <div class="navbar">
                 <div class="col-sm-12 col-md-12">
                     <ul class="ul_nav_vertical">
                         <li class="nav_menu"><img src="img/logos_iconos/icono_menu.jpg" alt="icono_menu">
@@ -162,7 +162,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_1.jpg" alt="imagen_prefume"></li>
-                                        <li><h6>BOSS</h6></li>
+                                        <li><h2>BOSS</h2></li>
                                         <li><p>Boss Scent For Her EDP 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -172,7 +172,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_13.jpg" alt="imagen_prefume"></li>
-                                        <li><h6>CAROLINA HERRERA</h6></li>
+                                        <li><h2>CAROLINA HERRERA</h2></li>
                                         <li><p>Good Girl For Her EDP 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -182,7 +182,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_3.jpg" alt="imagen_prefume"></li>
-                                        <li><h6>CAROLINA HERRERA</h6></li>
+                                        <li><h2>CAROLINA HERRERA</h2></li>
                                         <li><p>212 Heroes For Her EDP 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -193,7 +193,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_8.jpg" alt="imagen_prefume"></li>
-                                        <li><h6>CAROLINA HERRERA</h6></li>
+                                        <li><h2>CAROLINA HERRERA</h2></li>
                                         <li><p>Bad Boy For Him EDT 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -203,7 +203,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>
                                         <li><img src="img/perfumes/imagen_perfume_5.jpg" alt="imagen_prefume"></li>
-                                        <li><h6>PACO RABANNE</h6></li>
+                                        <li><h2>PACO RABANNE</h2></li>
                                         <li><p>Phantom EDT 10 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
@@ -213,7 +213,7 @@
                                 <div class="recommended_1 text-center">
                                     <ul>                        
                                         <li><li><img src="img/perfumes/imagen_perfume_6.jpg" alt="imagen_prefume"></li></li>
-                                        <li><h6>CAROLINA HERRERA</h6></li>
+                                        <li><h2>CAROLINA HERRERA</h2></li>
                                         <li><p>212 Men EDT 100 ml</p></li>
                                         <button class="button_recommended">COMPRAR</button>
                                     </ul>
